# rwLog-Rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEBUG_LOG.md  ENGINE_REFACTOR_PLAN.md  PARALLEL_UPGRADE.md  PLAN_CONSOLIDATED.md  README.md  YIELD_ARCHITECTURE_PROBLEM.md  stitched.rs
benches/: eval_bench.rs
docs/bugs/: alt-backtracking-infinite-recursion.md
examples/: Untitled.ipynb  addition.ipynb  addition.txt  debug_backward_query.rs  equality_constraints.txt  program_synth.ipynb  program_synthesis.ipynb  range_sets.txt  theory_demos.ipynb  treecalc.txt
examples/.ipynb_checkpoints/: addition-checkpoint.ipynb  program_synth-checkpoint.ipynb
scripts/: stitch_rs.sh
src/: api.rs  constraint.rs  drop_fresh.rs  engine.rs  engine_scheduler_tests.rs  eval.rs  factors.rs  goal.rs  join.rs  jupyter.rs  lib.rs  matching.rs  metrics.rs  nf.rs  node.rs  parser.rs  queue.rs  rel.rs  repl.rs  scheduler.rs  subst.rs  symbol.rs  table.rs  task.rs  term.rs  test_utils.rs  trace.rs  unify.rs  wire.rs  work.rs
src/chr/: mod.rs  tests.rs
src/cli/: compiler.rs  file_parser.rs  mod.rs  parse.rs  repl.rs
src/constraint/: tests.rs
src/drop_fresh/: tests.rs
src/engine/: tests.rs
src/factors/: tests.rs
src/join/: tests.rs
src/kernel/: compose.rs  dual.rs  meet.rs  mod.rs  util.rs
src/nf/: tests.rs
src/node/: tests.rs
src/parser/: tests.rs
src/rel/: tests.rs
src/scheduler/: mod.rs  pool.rs  worker.rs
src/tests/: engine.rs  jupyter.rs  kernel_compose.rs  kernel_dual.rs  kernel_meet.rs  queue.rs  (+7 more)
tests/: symmetry_prop.proptest-regressions  symmetry_prop.rs
(+16 files in other folders)
